# bevy_js_prototype

./: .editorconfig  .gitignore  03_reflect.js  04_ecs.js  Cargo.toml  README.md  package.json
assets/js/: reflect.js
crates/bevy_js_generator/: Cargo.toml  README.md
crates/bevy_js_generator/src/: generate.rs  main.rs  module.rs  utils.rs
crates/generator/: Cargo.toml  README.md
crates/generator/src/: main.rs  module.rs
examples/: hello_world.js  hello_world.rs  inspector.rs  startup_system.js  startup_system.rs  text.js  text.rs
js/: 03_core.js  bevy.js  math.js  render.js  rust.js  transform.js  ui.js
js/alloc/: vec.js
js/bevy/: animation.js  gltf.js
js/bevy/asset/: handle.js
js/bevy/core/: name.js
js/bevy/corePipeline/: clearColor.js
js/bevy/corePipeline/core2D/: camera2D.js
js/bevy/corePipeline/core3D/: camera3D.js
js/bevy/hierarchy/components/: children.js  parent.js
js/bevy/pbr/: bundle.js  light.js
js/bevy/render/: color.js  primitives.js  view.js
js/bevy/render/camera/: camera.js  projection.js
js/bevy/render/mesh/mesh/: skinning.js
js/bevy/render/view/: visibility.js
js/bevy/sprite/: sprite.js
js/bevy/sprite/mesh2D/: mesh.js
js/bevy/text/: text.js
js/bevy/time/: stopwatch.js  time.js  timer.js
js/bevy/transform/components/: globalTransform.js  transform.js
js/bevy/ui/: focus.js  geometry.js  uiNode.js
js/bevy/ui/widget/: button.js  image.js
js/core/: option.js
js/glam/f32/: affine3a.js  mat3a.js  vec2.js  vec3.js  vec3a.js  vec4.js
js/glam/f32/sse2/: quat.js
js/ui/: focus.js  geometry.js  ui_node.js
src/: builder.rs  lend.rs  lib.rs  loader.rs  resource.rs  runtime.rs  world.rs
src/inspector/: info.rs  mod.rs  server.rs  websocket.rs
src/query/: filter.rs  mod.rs  ptr.rs  vec.rs
src/runtimes/: bevy.rs  mod.rs
src/runtimes/bevy/: 03_console.js  03_ecs.js  03_reflect.js  04_ecs.js  99_main.js  entity.rs  mod.rs
src/runtimes/bevy/ext/: README.md  mod.rs
src/runtimes/bevy/ext/alloc/: 04_vec.js  mod.rs
src/runtimes/bevy/ext/bevy_animation/: 04_bevy_animation.js
src/runtimes/bevy/ext/bevy_asset/: 04_handle.js  05_server.js  mod.rs
src/runtimes/bevy/ext/bevy_core/: 04_name.js
src/runtimes/bevy/ext/bevy_core_pipeline/: 04_clear_color.js
src/runtimes/bevy/ext/bevy_core_pipeline/core_2_d/: 04_camera_2_d.js
src/runtimes/bevy/ext/bevy_core_pipeline/core_2d/: 04_camera_2d.js
src/runtimes/bevy/ext/bevy_core_pipeline/core_3_d/: 04_camera_3_d.js
src/runtimes/bevy/ext/bevy_core_pipeline/core_3d/: 04_camera_3d.js
src/runtimes/bevy/ext/bevy_ecs/: 03_bevy_ecs.js  03_ecs.js  03_reflect.js  04_entity.js  04_reflect.js  05_query.js  05_world.js  06_world.js  entity.rs  keys.rs  mod.rs  query.rs  reflect.rs  type_registry.rs  world.rs
src/runtimes/bevy/ext/bevy_ecs/serde/: de.rs
src/runtimes/bevy/ext/bevy_gltf/: 04_bevy_gltf.js
src/runtimes/bevy/ext/bevy_hierarchy/components/: 04_children.js  04_parent.js
src/runtimes/bevy/ext/bevy_pbr/: 04_bundle.js  05_light.js
src/runtimes/bevy/ext/bevy_render/: 04_color.js  04_primitives.js  04_view.js  mod.rs
src/runtimes/bevy/ext/bevy_render/camera/: 04_projection.js  05_camera.js
src/runtimes/bevy/ext/bevy_render/mesh/mesh/: 04_skinning.js
src/runtimes/bevy/ext/bevy_render/view/: 04_visibility.js
src/runtimes/bevy/ext/bevy_render/view/visibility/: 04_render_layers.js
src/runtimes/bevy/ext/bevy_sprite/: 04_sprite.js
src/runtimes/bevy/ext/bevy_sprite/mesh2d/: 04_mesh.js
src/runtimes/bevy/ext/bevy_sprite/mesh_2_d/: 04_mesh.js
src/runtimes/bevy/ext/bevy_text/: 05_text.js  mod.rs
src/runtimes/bevy/ext/bevy_time/: 04_stopwatch.js  04_time.js  05_timer.js  mod.rs  time.rs
src/runtimes/bevy/ext/bevy_transform/: mod.rs
src/runtimes/bevy/ext/bevy_transform/components/: 04_global_transform.js  05_transform.js  07_global_transform.js
src/runtimes/bevy/ext/bevy_ui/: 04_focus.js  04_geometry.js  05_ui_node.js  06_entity.js  mod.rs
src/runtimes/bevy/ext/bevy_ui/widget/: 04_button.js  04_image.js
src/runtimes/bevy/ext/core/: 04_option.js  mod.rs
src/runtimes/bevy/ext/glam/: mod.rs
src/runtimes/bevy/ext/glam/bool/: 04_bvec2.js  04_bvec3.js  04_bvec4.js  04_bvec_2.js  04_bvec_3.js  04_bvec_4.js
src/runtimes/bevy/ext/glam/f32/: 04_vec2.js  04_vec3.js  05_mat3.js  06_affine2.js  06_affine3a.js
src/runtimes/bevy/ext/glam/f32/sse2/: 04_vec3a.js  04_vec4.js  05_mat2.js  05_mat3a.js  05_mat4.js
src/runtimes/bevy/ext/glam/f64/: 04_dvec2.js  04_dvec3.js  04_dvec4.js  05_dmat2.js  05_dmat3.js  05_dmat4.js  06_daffine2.js  06_daffine3.js
src/runtimes/bevy/ext/glam/f_32/: 04_vec_2.js  04_vec_3.js  05_mat_3.js  06_affine_2.js  06_affine_3_a.js
src/runtimes/bevy/ext/glam/f_32/sse_2/: 04_vec_3_a.js  04_vec_4.js  05_mat_2.js  05_mat_3_a.js  05_mat_4.js
src/runtimes/bevy/ext/glam/f_64/: 04_dvec_2.js  04_dvec_3.js  04_dvec_4.js  05_dmat_2.js  05_dmat_3.js  05_dmat_4.js  06_daffine_2.js  06_daffine_3.js
src/runtimes/bevy/ext/glam/i32/: 04_ivec2.js  04_ivec3.js  04_ivec4.js
src/runtimes/bevy/ext/glam/i_32/: 04_ivec_2.js  04_ivec_3.js  04_ivec_4.js
src/runtimes/bevy/ext/glam/u32/: 04_uvec2.js  04_uvec3.js  04_uvec4.js
src/runtimes/bevy/ext/glam/u_32/: 04_uvec_2.js  04_uvec_3.js  04_uvec_4.js
