[package]
name = "bevy_js"
version = "0.0.1"
edition = "2021"
description = "Prototype JavaScript integration in Bevy game engine"
exclude = ["assets/"]
keywords = ["game", "engine", "gamedev", "bevy", "deno", "javascript"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/Suficio/bevy_js_prototype"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["generator"]
inspector = ["tide", "tide-websockets"]
generator = ["convert_case", "syn", "proc-macro2", "gumdrop"]

[dependencies]
bevy = { git = "https://github.com/Suficio/bevy.git", branch = "js-prototype" }
deno_core = { git = "https://github.com/Suficio/deno.git", branch = "js-prototype" }

serde_json = "1.0.85"
serde_path_to_error = "0.1.8"

# Inspector dependencies
tide = { version = "0.16.0", default-features = false, features = ["h1-server"], optional = true }
tide-websockets = { version = "0.4.0", optional = true }

# Generator dependencies
gumdrop = { version = "0.8.1", optional = true }
convert_case = { version = "0.5.0", optional = true }
syn = { version = "1.0.98", features = ["extra-traits", "printing"], optional = true }
proc-macro2 = { version = "1.0.40", optional = true }

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[[bin]]
name = "generator"
required-features = ["generator"]

[[example]]
name = "hello_world"
path = "examples/hello_world.rs"

[[example]]
name = "startup_system"
path = "examples/startup_system.rs"

[[example]]
name = "text"
path = "examples/text.rs"

[[example]]
name = "inspector"
path = "examples/inspector.rs"
required-features = ["inspector"]
