[package]
name = "bevy_js"
version = "0.0.1"
edition = "2021"
description = "Prototype JavaScript integration in Bevy game engine"
exclude = ["assets/"]
keywords = ["bevy", "bevy_js", "deno", "gamedev", "javascript"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/Suficio/bevy_js_prototype"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
inspector = ["tide", "tide-websockets"]

[workspace]
members = ["crates/*"]

[workspace.dependencies]
# TODO(https://github.com/bevyengine/bevy/pull/6240) QueryState::new_with_state
bevy = { git = "https://github.com/Suficio/bevy.git", rev = "75742e179a74b55fca0cb3ee0824e0b7d760ea99" }
deno_core = "0.155.0"

[dependencies]
bevy = { workspace = true }
deno_core = { workspace = true }
deno_console = "0.73.0"

serde_path_to_error = "0.1"

# Inspector dependencies
tide = { version = "0.16.0", default-features = false, features = ["h1-server"], optional = true }
tide-websockets = { version = "0.4.0", optional = true }

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[[example]]
name = "hello_world"
path = "examples/hello_world.rs"

[[example]]
name = "startup_system"
path = "examples/startup_system.rs"

[[example]]
name = "text"
path = "examples/text.rs"

[[example]]
name = "inspector"
path = "examples/inspector.rs"
required-features = ["inspector"]
